; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_rtc_gpio_set_drive_capability.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/extr_rtc_module.c_rtc_gpio_set_drive_capability.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32 }
%struct.TYPE_3__ = type { i64 }

@.str = private unnamed_addr constant [22 x i8] c"RTC_GPIO number error\00", align 1
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [16 x i8] c"Output pad only\00", align 1
@GPIO_DRIVE_CAP_MAX = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [28 x i8] c"GPIO drive capability error\00", align 1
@rtc_spinlock = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@rtc_gpio_desc = common dso_local global %struct.TYPE_4__* null, align 8
@rtc_gpio_reg = common dso_local global %struct.TYPE_3__** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rtc_gpio_set_drive_capability(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i32 @rtc_gpio_is_valid_gpio(i64 %5)
  %7 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %8 = call i32 @RTC_MODULE_CHECK(i32 %6, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i64, i64* %3, align 8
  %10 = call i32 @GPIO_IS_VALID_OUTPUT_GPIO(i64 %9)
  %11 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %12 = call i32 @RTC_MODULE_CHECK(i32 %10, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i32 %11)
  %13 = load i64, i64* %4, align 8
  %14 = load i64, i64* @GPIO_DRIVE_CAP_MAX, align 8
  %15 = icmp slt i64 %13, %14
  %16 = zext i1 %15 to i32
  %17 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  %18 = call i32 @RTC_MODULE_CHECK(i32 %16, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0), i32 %17)
  %19 = call i32 @portENTER_CRITICAL(i32* @rtc_spinlock)
  %20 = call i32 @portEXIT_CRITICAL(i32* @rtc_spinlock)
  %21 = load i32, i32* @ESP_OK, align 4
  ret i32 %21
}

declare dso_local i32 @RTC_MODULE_CHECK(i32, i8*, i32) #1

declare dso_local i32 @rtc_gpio_is_valid_gpio(i64) #1

declare dso_local i32 @GPIO_IS_VALID_OUTPUT_GPIO(i64) #1

declare dso_local i32 @portENTER_CRITICAL(i32*) #1

declare dso_local i32 @portEXIT_CRITICAL(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
